--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 
 [![CRAN status](https://www.r-pkg.org/badges/version/multipleITScontrol)](https://CRAN.R-project.org/package=multipleITScontrol) [![Codecov test coverage](https://codecov.io/gh/herts-phei/multipleITScontrol/graph/badge.svg)](https://app.codecov.io/gh/herts-phei/multipleITScontrol) [![R-CMD-check](https://github.com/herts-phei/multipleITScontrol/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/herts-phei/multipleITScontrol/actions/workflows/R-CMD-check.yaml)
-
+[![CRAN status](https://www.r-pkg.org/badges/version/multipleITScontrol)](https://CRAN.R-project.org/package=multipleITScontrol)
+[![R-CMD-check](https://github.com/herts-phei/multipleITScontrol/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/herts-phei/multipleITScontrol/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 ## Overview
@@ -52,87 +53,4 @@ In order for the package functions to work properly, there are several requireme
 
 -   Power calculations to ensure sufficient statistical power in the intervention of interest should be performed, but this is beyond the scope of the package and should be performed independently.
 
-## Usage
-
-This is a basic example which shows you how to solve a common problem with two stage interrupted time series with a control:
-
-**Background**: Alpine Meadow School and Forest Tiger School have similar student demographics, including socioeconomic status, ethnicity, and academic performance. Both schools are part of Clarkson County's public school district.
-
-Alpine Meadow School wants to trial out two new interventions to improve their school's reading comprehension score, and to compare post intervention results with the pre-intervention score.
-
-**Intervention 1: Implementing a New Reading Programme**
-
--   **Objective:** Improve reading comprehension and literacy rates among students.
--   **Start Date:** September 1, 2025
--   **Duration:** 6 months
--   **Description:** The school introduces a new, evidence-based reading program that includes daily reading sessions, interactive reading activities, and regular assessments.
--   **Measurement:** Reading comprehension scores from standardized tests administered weekly.
-
-**Intervention 2: Introducing Peer Tutoring Sessions**
-
--   **Objective:** Further enhance reading comprehension and literacy rates.
--   **Start Date:** March 1, 2026 (immediately after the reading program ends)
--   **Duration:** 6 months
--   **Description:** The school implements peer tutoring sessions where older students tutor younger students in reading. These sessions are held twice a week and focus on reading comprehension strategies and practice.
--   **Measurement:** Reading comprehension scores from standardized tests administered weekly.
-
-### Controlled Interrupted Time Series Design
-
-**Step 1: Baseline Period**
-
--   **Duration:** 6 months (March 1, 2025 - August 31, 2025)
--   **Data Collection:** Collect baseline data on reading comprehension scores administered weekly.
-
-**Step 2: Intervention 1 Period**
-
--   **Duration:** 6 months (September 1, 2025 - February 28, 2026)
--   **Data Collection:** Continue collecting data on reading comprehension scores during the reading program administered weekly.
-
-**Step 3: Intervention 2 Period**
-
--   **Duration:** 6 months (March 1, 2026 - August 31, 2026)
--   **Data Collection:** Collect data on reading comprehension scores during the peer tutoring sessions administered weekly.
-
-The calendar plot below summarises the timeline of the interventions:
-
-```{r calendar, echo = FALSE, warning = FALSE, message = FALSE, fig.height=10, fig.retina=3}
-library(pheicharts)
-library(tidyverse)
-box::use(../../phei_functions/phei)
-
-tibble_data <- tibble::tibble(Date = seq(as.Date("2025-03-03"), as.Date("2026-08-30"), by = "day"),
-  Period = dplyr::case_when(
-    Date >= as.Date("2025-03-03") & Date <= as.Date("2025-08-31") ~ "Pre-intervention period",
-    Date >= as.Date("2025-09-01") & Date <= as.Date("2026-03-01") ~ "Intervention 1) Reading Program",
-    Date >= as.Date("2026-03-02") & Date <= as.Date("2026-08-30") ~ "Intervention 2) Peer Tutoring Sessions"
-  ))
-
-plot <- phei$phei_calendar(
-  tibble_data,
-  date_column = "Date",
-  "Period",
-  colours = phei_palettes$cool_colours,
-  ncol = 3
-) +
-  theme(strip.text = element_text(size = rel(0.5)),
-        axis.text = element_text(size = rel(0.5)),
-        plot.caption = element_text(size = rel(0.5)),
-        legend.text = element_text(size = rel(0.5)))
-  
-
-plot$layers[[2]]$aes_params$size <- 1.5
-
-plot
-
-
-```
-
-
-```{r example}
-library(multipleITScontrol)
-
-
-
-```
-
-Further examples can be found in the vignette.
+Examples of how to use the package can be found in the vignette here.
